--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "nxt-watch",
   "private": true,
   "version": "1.0.0",
-  "engines": {
-    "node": "^10.13 || 12 || 14 || 15",
-    "npm": ">=6"
-  },
+  "engines": { "node": "20.x" },
+  
   "dependencies": {
     "@craco/craco": "6.1.1",
     "@testing-library/jest-dom": "5.11.9",
